<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:enabled="false"
        app:key="server-uri"
        app:persistent="false"
        app:selectable="false"
        app:shouldDisableView="false"
        app:summary="@string/server_uri_summary"
        app:title="@string/server_uri_pref" />
    <EditTextPreference
        app:enabled="false"
        app:key="app-id"
        app:persistent="false"
        app:selectable="false"
        app:shouldDisableView="false"
        app:summary="@string/app_id_summary"
        app:title="@string/app_id_pref" />
    <EditTextPreference
        app:enabled="false"
        app:key="sender-id"
        app:persistent="false"
        app:selectable="false"
        app:shouldDisableView="false"
        app:summary="@string/sender_id_summary"
        app:title="@string/sender_id_pref" />
    <EditTextPreference
        app:defaultValue="@string/user_name_default"
        app:enabled="false"
        app:key="user-name"
        app:persistent="false"
        app:selectable="false"
        app:shouldDisableView="false"
        app:summary="@string/user_name_summary"
        app:title="@string/user_name_pref" />
</PreferenceScreen>